--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - docker build -t $docker_image$ .
+      - docker build -t gcr.io/lhgames-2017/makoto711katsu .
   post_build:
     commands:
-      - docker push $docker_image$
+      - docker push gcr.io/lhgames-2017/makoto711katsu
